--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -9,12 +9,11 @@
 
 .navbar-center {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   flex: 1;
   height: 0;
-  overflow: hidden;
   transition: all 0.3s ease;
 }
 
