--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--principal);
 }
 
 code {
@@ -16,4 +17,18 @@ code {
   --principal: #5f8996;
   --secundary: #85044f;
   --textcolor: white;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+
+* {
+  font-weight: 400;
 }
